Refactored rest endpoints to more consistent form. Took Liquibase into use, made four example changelogs. Added auditing info - timestamps and users - to all entities and rest interface objects
